--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,9 +49,10 @@ dependencies:
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.1
   flutter_plugin_android_lifecycle: 2.0.17
+  flutter_rating_bar: 4.0.1
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
-  go_router: 7.1.1
+  go_router: 12.1.3
   google_fonts: 6.1.0
   google_sign_in: 6.1.5
   google_sign_in_android: 6.1.20
@@ -87,6 +88,7 @@ dependencies:
   sqflite: 2.2.6
   stop_watch_timer: 3.0.2
   stream_transform: 2.1.0
+  table_calendar: 3.0.9
   timeago: 3.2.2
   url_launcher: 6.2.5
   url_launcher_android: 6.3.0
