--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   floating_bottom_navigation_bar: 1.5.2
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.1
+  flutter_native_splash: 2.3.1
   flutter_plugin_android_lifecycle: 2.0.17
   flutter_rating_bar: 4.0.1
   font_awesome_flutter: 10.6.0
@@ -91,6 +92,7 @@ dependencies:
   stream_transform: 2.1.0
   table_calendar: 3.0.9
   timeago: 3.2.2
+  universal_io: 2.2.2
   url_launcher: 6.2.5
   url_launcher_android: 6.3.0
   url_launcher_ios: 6.2.5
@@ -100,6 +102,7 @@ dependencies:
   video_player_avfoundation: 2.5.1
   video_player_platform_interface: 6.2.1
   video_player_web: 2.1.2
+  xml: 6.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
