--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
     sdk: flutter
   auto_size_text: 3.0.0
   cached_network_image: 3.3.1
+  carousel_slider: 4.2.1
   chewie: 1.7.1
   cloud_firestore: 4.15.7
   cloud_firestore_platform_interface: 6.1.8
@@ -34,6 +35,7 @@ dependencies:
   collection: 1.18.0
   dropdown_button2: 2.3.9
   easy_debounce: 2.0.1
+  expandable: 5.0.1
   file_picker: 6.1.1
   firebase_auth: 4.17.7
   firebase_auth_platform_interface: 7.1.7
