--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,8 +1,8 @@
 flutter_native_splash:
-  color: "#3D4335"
+  color: "#D12833"
   color_dark: "#4B39EF"
   android_12:
-    color: "#3D4335"
+    color: "#D12833"
     color_dark: "#4B39EF"
   android: true
   ios: true
