--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_native_splash: 2.3.1
   flutter_plugin_android_lifecycle: 2.0.20
   flutter_rating_bar: 4.0.1
+  flutter_staggered_grid_view: 0.7.0
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
   go_router: 12.1.3
