--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   firebase_storage_web: 3.9.5
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.3.1
+  flutter_google_places: 
+    git:
+      url: https://github.com/ShehanYjoz/flutter_google_places.git
   flutter_native_splash: 2.3.1
   flutter_plugin_android_lifecycle: 2.0.20
   flutter_rating_bar: 4.0.1
@@ -58,6 +61,12 @@ dependencies:
   from_css_color: 2.0.0
   go_router: 12.1.3
   google_fonts: 6.1.0
+  google_maps: 7.1.0
+  google_maps_flutter: 2.6.1
+  google_maps_flutter_android: 2.8.1
+  google_maps_flutter_ios: 2.6.1
+  google_maps_flutter_platform_interface: 2.7.1
+  google_maps_flutter_web: 0.5.7
   google_sign_in: 6.1.5
   google_sign_in_android: 6.1.20
   google_sign_in_ios: 5.7.6
@@ -72,6 +81,8 @@ dependencies:
   intl: 0.19.0
   json_path: 0.7.2
   mime_type: 1.0.0
+  package_info_plus: 8.0.0
+  package_info_plus_platform_interface: 3.0.0
   page_transition: 2.1.0
   path_provider: 2.1.3
   path_provider_android: 2.2.5
@@ -113,6 +124,8 @@ dependencies:
 
 dependency_overrides:
   http: 1.2.1
+  package_info_plus: 8.0.0
+  package_info_plus_platform_interface: 3.0.0
   uuid: ^4.0.0
   win32: 5.5.1
 
