--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   cloud_firestore: 4.17.3
   cloud_firestore_platform_interface: 6.2.3
   cloud_firestore_web: 3.12.3
+  cloud_functions: 4.7.4
+  cloud_functions_platform_interface: 5.5.26
+  cloud_functions_web: 4.9.4
   collection: 1.18.0
   dropdown_button2: 2.3.9
   easy_debounce: 2.0.1
@@ -57,6 +60,8 @@ dependencies:
   flutter_plugin_android_lifecycle: 2.0.20
   flutter_rating_bar: 4.0.1
   flutter_staggered_grid_view: 0.7.0
+  flutter_stripe: 10.1.1
+  flutter_stripe_web: 5.1.0
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
   go_router: 12.1.3
@@ -98,13 +103,17 @@ dependencies:
   sqflite: 2.2.6
   stop_watch_timer: 3.0.2
   stream_transform: 2.1.0
+  stripe_android: 10.1.1
+  stripe_ios: 10.1.0
+  stripe_js: 3.4.0
+  stripe_platform_interface: 10.1.1
   table_calendar: 3.1.1
   text_search: 1.0.1
   timeago: 3.6.1
   universal_io: 2.2.2
-  url_launcher: 6.2.5
-  url_launcher_android: 6.3.0
-  url_launcher_ios: 6.2.5
+  url_launcher: 6.3.0
+  url_launcher_android: 6.3.4
+  url_launcher_ios: 6.3.1
   url_launcher_platform_interface: 2.3.2
   video_player: 2.8.6
   video_player_android: 2.4.16
