--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,6 @@ dependencies:
   flutter_google_places: 
     git:
       url: https://github.com/ShehanYjoz/flutter_google_places.git
-  flutter_native_splash: 2.3.1
   flutter_plugin_android_lifecycle: 2.0.20
   flutter_rating_bar: 4.0.1
   flutter_staggered_grid_view: 0.7.0
@@ -109,7 +108,6 @@ dependencies:
   stripe_platform_interface: 10.1.1
   table_calendar: 3.1.1
   timeago: 3.6.1
-  universal_io: 2.2.2
   url_launcher: 6.3.0
   url_launcher_android: 6.3.4
   url_launcher_ios: 6.3.1
@@ -119,7 +117,6 @@ dependencies:
   video_player_avfoundation: 2.6.1
   video_player_platform_interface: 6.2.2
   video_player_web: 2.3.1
-  xml: 6.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -155,12 +152,12 @@ flutter:
     - assets/images/
     - assets/videos/
     - assets/audios/
-    - assets/lottie_animations/
     - assets/rive_animations/
     - assets/pdfs/
+    - assets/jsons/
 
 
-  
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
