--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_google_places: 
     git:
       url: https://github.com/ShehanYjoz/flutter_google_places.git
+  flutter_native_splash: 2.3.1
   flutter_plugin_android_lifecycle: 2.0.20
   flutter_rating_bar: 4.0.1
   flutter_staggered_grid_view: 0.7.0
@@ -108,6 +109,7 @@ dependencies:
   stripe_platform_interface: 10.1.1
   table_calendar: 3.1.1
   timeago: 3.6.1
+  universal_io: 2.2.2
   url_launcher: 6.3.0
   url_launcher_android: 6.3.4
   url_launcher_ios: 6.3.1
@@ -117,6 +119,7 @@ dependencies:
   video_player_avfoundation: 2.6.1
   video_player_platform_interface: 6.2.2
   video_player_web: 2.3.1
+  xml: 6.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
