--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -107,6 +107,7 @@ dependencies:
   stripe_ios: 10.1.0
   stripe_js: 3.4.0
   stripe_platform_interface: 10.1.1
+  styled_divider: 1.0.4
   table_calendar: 3.1.1
   timeago: 3.6.1
   universal_io: 2.2.2
